src/snapshots/alma__parser__tests__module_parser-2.snap
---
source: src/parser.rs
expression: "parse(\"module Test\")"

---
Input:

module Test

Result:

[
    Module {
        name: Node {
            start: 7,
            end: 11,
            line: 1,
            column: 7,
            value: Identifier_ {
                name: "Test",
                case: Pascal,
            },
        },
        exports: [],
        imports: [],
        definitions: [],
    },
]
