src/snapshots/alma__parser__tests__module_parser-20.snap
---
source: src/parser.rs
expression: "parse(\"\\\nmodule Test\n\nimport Banana as B\n\nimport Phone exposing (raffi)\n\nimport Apple as A exposing (orange)\n\")"

---
Input:

module Test

import Banana as B

import Phone exposing (raffi)

import Apple as A exposing (orange)


Result:

(
    Module {
        name: ModuleName {
            parts: [
                Node {
                    start: 7,
                    end: 11,
                    line: 1,
                    column: 7,
                    value: Identifier_ {
                        name: "Test",
                        case: Pascal,
                    },
                },
            ],
            full_name: "Test",
        },
        exports: [],
        imports: [
            Node {
                start: 13,
                end: 31,
                line: 3,
                column: 0,
                value: Import_ {
                    module_name: ModuleName {
                        parts: [
                            Node {
                                start: 20,
                                end: 26,
                                line: 3,
                                column: 7,
                                value: Identifier_ {
                                    name: "Banana",
                                    case: Pascal,
                                },
                            },
                        ],
                        full_name: "Banana",
                    },
                    alias: Some(
                        Node {
                            start: 30,
                            end: 31,
                            line: 3,
                            column: 17,
                            value: Identifier_ {
                                name: "B",
                                case: Pascal,
                            },
                        },
                    ),
                    exposing: [],
                },
            },
            Node {
                start: 33,
                end: 62,
                line: 5,
                column: 0,
                value: Import_ {
                    module_name: ModuleName {
                        parts: [
                            Node {
                                start: 40,
                                end: 45,
                                line: 5,
                                column: 7,
                                value: Identifier_ {
                                    name: "Phone",
                                    case: Pascal,
                                },
                            },
                        ],
                        full_name: "Phone",
                    },
                    alias: None,
                    exposing: [
                        Node {
                            start: 56,
                            end: 61,
                            line: 5,
                            column: 23,
                            value: Identifier(
                                Node {
                                    start: 56,
                                    end: 61,
                                    line: 5,
                                    column: 23,
                                    value: Identifier_ {
                                        name: "raffi",
                                        case: Camel,
                                    },
                                },
                            ),
                        },
                    ],
                },
            },
            Node {
                start: 64,
                end: 99,
                line: 7,
                column: 0,
                value: Import_ {
                    module_name: ModuleName {
                        parts: [
                            Node {
                                start: 71,
                                end: 76,
                                line: 7,
                                column: 7,
                                value: Identifier_ {
                                    name: "Apple",
                                    case: Pascal,
                                },
                            },
                        ],
                        full_name: "Apple",
                    },
                    alias: Some(
                        Node {
                            start: 80,
                            end: 81,
                            line: 7,
                            column: 16,
                            value: Identifier_ {
                                name: "A",
                                case: Pascal,
                            },
                        },
                    ),
                    exposing: [
                        Node {
                            start: 92,
                            end: 98,
                            line: 7,
                            column: 28,
                            value: Identifier(
                                Node {
                                    start: 92,
                                    end: 98,
                                    line: 7,
                                    column: 28,
                                    value: Identifier_ {
                                        name: "orange",
                                        case: Camel,
                                    },
                                },
                            ),
                        },
                    ],
                },
            },
        ],
        definitions: [],
    },
    [],
)
