src/snapshots/alma__parser__tests__module_parser-23.snap
---
source: src/parser.rs
expression: "parse(\"module Test\n\nmodule Test2\n\n    module i_am_not_PascalCase\n        test = 1\n\")"

---
Input:

module Test

module Test2

    module i_am_not_PascalCase
        test = 1


Result:

5:11: The module name should be PascalCase, but instead found: 'i_am_not_PascalCase'

  3│  module Test2
  4│  
  5│      module i_am_not_PascalCase
   │             ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑
  6│          test = 1

Error {
    message: "5:11: The module name should be PascalCase, but instead found: \'i_am_not_PascalCase\'\n\n  3│  module Test2\n  4│  \n  5│      module i_am_not_PascalCase\n   │             ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑\n  6│          test = 1",
    token: Token {
        kind: Identifier,
        position: 38,
        end_position: 57,
        lexeme: "i_am_not_PascalCase",
        line: 5,
        column: 11,
        indent: 4,
    },
}
