src/snapshots/alma__parser__tests__module_parser-24.snap
---
source: src/parser.rs
expression: "parse(\"\\\nmodule Test\n\nIAmNotCamelCase = 1\n\")"

---
Input:

module Test

IAmNotCamelCase = 1


Result:

3:0: Expected the left side of a definition like `n = 5` or `add x y = x + y` or a type definition like `type User = LoggedIn | Anon`, but instead found: `IAmNotCamelCase`

  1│  module Test
  2│  
  3│  IAmNotCamelCase = 1
   │  ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑

Error {
    message: "3:0: Expected the left side of a definition like `n = 5` or `add x y = x + y` or a type definition like `type User = LoggedIn | Anon`, but instead found: `IAmNotCamelCase`\n\n  1│  module Test\n  2│  \n  3│  IAmNotCamelCase = 1\n   │  ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑",
    token: Token {
        kind: CapitalizedIdentifier,
        position: 13,
        end_position: 28,
        lexeme: "IAmNotCamelCase",
        line: 3,
        column: 0,
        indent: 0,
    },
}
