src/snapshots/alma__parser__tests__module_parser-26.snap
---
source: src/parser.rs
expression: "parse(\"module Te_st\")"

---
Input:

module Te_st

Result:

1:7: Invalid module name 'Te_st'.

Module names have to be `PascalCase` and also not have extraneous characters, because they need to match the file name in the file system.

  1│  module Te_st
   │         ↑↑↑↑↑

Error {
    message: "1:7: Invalid module name 'Te_st'.\n\nModule names have to be `PascalCase` and also not have extraneous characters, because they need to match the file name in the file system.\n\n  1│  module Te_st\n   │         ↑↑↑↑↑",
    token: Token {
        kind: ModuleIdentifier,
        position: 7,
        end_position: 12,
        lexeme: "Te_st",
        line: 1,
        column: 7,
        indent: 0,
    },
}
