src/snapshots/alma__parser__tests__module_parser-28.snap
---
source: src/parser.rs
expression: "parse(\"module Test.Te_st.Test\")"

---
Input:

module Test.Te_st.Test

Result:

1:12: Invalid module name 'Te_st'.

Module names have to be `PascalCase` and also not have extraneous characters, because they need to match the file name in the file system.

  1│  module Test.Te_st.Test
   │              ↑↑↑↑↑

Error {
    message: "1:12: Invalid module name 'Te_st'.\n\nModule names have to be `PascalCase` and also not have extraneous characters, because they need to match the file name in the file system.\n\n  1│  module Test.Te_st.Test\n   │              ↑↑↑↑↑",
    token: Token {
        kind: CapitalizedIdentifier,
        position: 12,
        end_position: 17,
        lexeme: "Te_st",
        line: 1,
        column: 12,
        indent: 0,
    },
}
